# feedback-cluster

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/plans/: 2026-02-22-ai-idea-clustering-api.md  20260222-unified-clustering-engine.md
docs/plans/completed/: 2026-02-22-ai-idea-clustering-api.md
src/cluster_api/: app.py  config.py  db.py  exceptions.py  models.py
src/cluster_api/engines/: bertopic_engine.py  llm_engine.py
tests/: conftest.py  test_acceptance.py  test_bertopic_clustering.py  test_db_schema.py  test_ideas.py  test_llm_clustering.py  test_models.py
